tests/typing/errors/shadow/redefinition.expected
File "tests/typing/errors/shadow/redefinition.smt2", line 3, character 0-23:
Error Duplicate declaration of `a`, which was already declared at line 2, character 0-23
